# object-tracker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main  test_realnet_model.c
images/: plane.mtl
include/: frame_utils.h  globals.h  heightMap.h  image_reader.h  minimap.h  onnx.h  plane.h  rock2.h  skybox.h  stb_image.h  stb_image_write.h  textShowing.h  tiny_obj_loader.h
include/glad/: glad.h
include/text/: text.h
include/tracker/: frame_utils.h  image_reader.h
libs/sod/: sod.c
models/: bardak_detector.realnet
python/: download_images.py
script/: clean.sh  convert.sh  flip.sh  rename.sh
scripts/: crop_images.py  openimages.py
src/: Makefile  glad.c  heightMap.c  main.c  minimap.c  model_tester.c  mp4_reader.c  onnx.c  plane.c  skybox.c  sod.c  test_model.c  test_realnet_model.c  text.c  textShowing.c  tinyobj_loader.c  train_realnet_model.c  webcam.c  webcam_reader.c
src/reader/: mp4_reader.c
train_data/: train.ini  train.txt
train_data/negatives/: bardak_detector.realnet
train_data/negatives/random_objects/: bardak_detector.realnet
weights/: README.md
